--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite the default settings
 {
+    "editor.snippetSuggestions": "top",
     "files.exclude": {
         "**/*.orig": true,
         "**/.npm-cache": true,
