--- a/settings.json
+++ b/settings.json
@@ -21,5 +21,6 @@
         "document",
         "containers"
     ],
-    "git.autofetch": true
+    "git.autofetch": true,
+    "javascript.updateImportsOnFileMove.enabled": "always"
 }
