sets default tab size to 2

--- a/settings.json
+++ b/settings.json
@@ -22,5 +22,7 @@
         "containers"
     ],
     "git.autofetch": true,
-    "javascript.updateImportsOnFileMove.enabled": "always"
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "html.format.indentInnerHtml": true,
+    "editor.tabSize": 2
 }
