--- a/settings.json
+++ b/settings.json
@@ -24,5 +24,7 @@
     "git.autofetch": true,
     "javascript.updateImportsOnFileMove.enabled": "always",
     "html.format.indentInnerHtml": true,
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "git.fetchOnPull": true,
+    "git.rebaseWhenSync": true
 }
