--- a/settings.json
+++ b/settings.json
@@ -10,6 +10,7 @@
         "**/CVS": true,
         "**/.DS_Store": true
     },
+    "terminal.integrated.shell.osx": "/bin/zsh",
     "terminal.integrated.shell.windows": "C:\\Windows\\Sysnative\\cmd.exe",
     "window.openFilesInNewWindow": "on",
     "window.zoomLevel": 0,
