--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 // Place your settings in this file to overwrite the default settings
 {
     "editor.snippetSuggestions": "top",
+    "editor.tabSize": 2,
     "files.exclude": {
         "**/*.orig": true,
         "**/.npm-cache": true,
@@ -10,22 +11,21 @@
         "**/CVS": true,
         "**/.DS_Store": true
     },
+    "git.autofetch": true,
+    "git.enableSmartCommit": true,
+    "git.fetchOnPull": true,
+    "git.rebaseWhenSync": true,
+    "gitlens.codeLens.scopes": [
+        "document",
+        "containers"
+    ],
+    "html.format.indentInnerHtml": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
     "terminal.integrated.shell.osx": "/bin/zsh",
     "terminal.integrated.shell.windows": "C:\\Windows\\Sysnative\\cmd.exe",
     "window.openFilesInNewWindow": "on",
     "window.zoomLevel": 0,
     "workbench.editor.enablePreview": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
-    "workbench.sideBar.location": "right",
-    "git.enableSmartCommit": true,
-    "gitlens.codeLens.scopes": [
-        "document",
-        "containers"
-    ],
-    "git.autofetch": true,
-    "javascript.updateImportsOnFileMove.enabled": "always",
-    "html.format.indentInnerHtml": true,
-    "editor.tabSize": 2,
-    "git.fetchOnPull": true,
-    "git.rebaseWhenSync": true
+    "workbench.sideBar.location": "right"
 }
