--- a/settings.json
+++ b/settings.json
@@ -29,6 +29,7 @@
     "terminal.integrated.shell.windows": "C:\\Windows\\Sysnative\\cmd.exe",
     "window.openFilesInNewWindow": "on",
     "window.zoomLevel": 0,
+    "workbench.editor.decorations.badges": false,
     "workbench.editor.enablePreview": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
     "workbench.sideBar.location": "right",
